@@ -16,18 +16,17 @@ To Do (今後やろうと思うこと) 2016-09-09 K.Ohta
 ※迷ってること
 [VM] FM-11はどうしようかなぁ(；´Д｀)資料が非常に少ないし実機ないし(；´Д｀)
 *面倒くさいからちょっと待って>[FM7]日本語通信カードの実装
-[VM] diskかFDCにmix()を実装して、FDDシーク音を再生できるようにする（もし音源ファイルがあるならば)
 [FM7] 音声合成カードの実装（ブツがない）
 [FM7] マウスカードの実装（なんかなー）
 [Qt][VM] ROMやらセーブバイナリやらで必要な物をUI側からVMにQueryして一覧表を(StringListで)作る構造。
 
-*着手したがまだまだ>[FM77AV] ALUの描画ラインを使ってる時にCPUを喰い過ぎるのをどうにかする。
 *やるべきだが仕様上何か面倒くさいことになりそう>[FM7] Joystick -> Keyboard変換機構の実装
 *時期見てやる>[FM7] 漢字プリンタの実装（ったって、資料ないな(；´Д｀)）
 →FMPR-201の大まかなコマンドがあった　http://software.aufheben.info/ooholdpc/fmpr201.html
 
 --- 以下、過去ログ(ということにしたいのですね) ---
 
+*できた>[VM] diskかFDCにmix()を実装して、FDDシーク音を再生できるようにする（もし音源ファイルがあるならば)*着手したがまだまだ>[FM77AV] ALUの描画ラインを使ってる時にCPUを喰い過ぎるのをどうにかする。
 *たぶんできた>[FM7] キー入力が激しいと取りこぼす問題
 *いちおうできたが仕様とずれてる？>[FM8] バブルファイルの実装
 *たぶんできた>[Qt] 音量の設定が終了前と終了後で違っていることがある件について改善する
