@@ -9,13 +9,13 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2016-04-13<BR>
-Qt Port and FM7 series 2016-10-26<BR>
+Qt Port and FM7 series 2016-11-21<BR>
 libCSPavio 2.5.1<BR>
-libCSPgui 2.3.3<BR>
+libCSPgui 2.4.0<BR>
 libCSPosd 2.5.1<BR>
 libCSPemu_utils 2.2.0<BR>
 FFMPEG 3.1.5 + liblame 3.99 + libx264-148<BR>
-Build Version: 006cc1d851483ea84fc5a3f4fa58cbf03302c49b<BR>
+Build Version: 27ee1e6dbee9c40e249c65ac36c2a4f4c7fe0635<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -68,5 +68,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu 27,October 2016 17:02:52<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun 20, November 2016 23:11:38<!-- hhmts end -->
 </body> </html>
