@@ -1,5 +1,15 @@
 *** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***
 
+* SNAPSHOT November 21, 2016
+  * Upstream 2016-04-13
+  * [Linux] Build with Qt 5.5.1 . Abondon Qt 5.3 (If you need, build with your Qt or use binary of qt.io build version.)
+  * [OpenGL] Add Television like rendering to some machines. Needs OpenGL3.0 or upper.
+  * [OpenGL] Isolate both GL3.0 and GL2.0.
+  * [OpenGL] Improve internal of GLDraw and GLDraw_foo class.
+  * Built with 27ee1e6dbee9c40e249c65ac36c2a4f4c7fe0635 or newer.
+
+-- Nov 20, 2016 23:04:31 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
+
 * SNAPSHOT October 27, 2016
   * Upstream 2016-04-13
   * [GENERAL] Add ROMAJI-KANA input assistant feature. see romakana.[en|ja].txt .
